--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
         "matchdep": "~0.3.0",
         "mocha-html-reporter": "0.0.1",
         "sinon": "1.9.0",
-        "sinon-chai": "2.5.0"
+        "sinon-chai": "2.5.0",
+        "m3u8" : "0.0.6",
+        "q-io" : "1.13.1",
+        "mocha" : "2.2.5",
+        "q" : "1.4.1",
+        "underscore" : "1.8.3"
     }
 }
