--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "q-io" : "1.13.1",
         "mocha" : "2.2.5",
         "q" : "1.4.1",
-        "underscore" : "1.8.3"
+        "underscore" : "1.8.3",
+        "proxyquire" : "1.7.0"
     }
 }
