--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "underscore" : "1.8.3",
         "proxyquire" : "1.7.0",
         "grunt-mocha-istanbul" : "3.0.1",
-        "istanbul" : "0.3.18"
+        "istanbul" : "0.3.18",
+        "q-http" : "0.1.16"
     }
 }
