--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "proxyquire" : "1.7.0",
         "grunt-mocha-istanbul" : "3.0.1",
         "istanbul" : "0.3.18",
-        "q-http" : "0.1.16"
+        "q-http" : "0.1.16",
+        "nconf" : "0.7.2"
     }
 }
