integrating flavor downloader with m3u8 generator and networkClient

--- a/lib/config/config.json
+++ b/lib/config/config.json
@@ -1,3 +1,6 @@
 {
-  "mockNetwork" : true
+  "mockNetwork" : false,
+  "requestTimeout" : 10000,
+  "pollingInterval" : 10000,
+  "dvrWindow" : 432000
 }
