--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "q": "1.4.1",
     "underscore": "1.8.3",
     "request": "^2.61.0",
-    "winston": "^1.0.1"
+    "winston": "^1.0.1",
+    "nconf" : "0.7.2"
   }
 }
