--- a/lib/config/config.json
+++ b/lib/config/config.json
@@ -2,5 +2,7 @@
   "mockNetwork" : false,
   "requestTimeout" : 10000,
   "pollingInterval" : 10000,
-  "dvrWindow" : 432000
+  "dvrWindow" : 7200,
+  "logLevel" : "debug",
+  "logFileName" : "logs/filelog-info.log"
 }
