--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "sinon": "1.9.0",
     "sinon-chai": "2.5.0",
     "mocha": "2.2.5",
-    "q": "1.4.1",
+    "istanbul" : "0.3.18",
+    "grunt-mocha-istanbul" : "3.0.1",
     "proxyquire": "1.7.0"
   },
   "dependencies": {
