add root folder to config

--- a/lib/config/config.json
+++ b/lib/config/config.json
@@ -1,5 +1,6 @@
 {
   "mockNetwork" : false,
+  "rootFolderPath" : "/home/dev/DVR",
   "requestTimeout" : 10000,
   "pollingInterval" : 10000,
   "dvrWindow" : 7200,
