--- a/lib/config/config.json
+++ b/lib/config/config.json
@@ -10,5 +10,8 @@
     "hostname" : "localhost",
     "port" : "1935",
     "applicationName" : "kLive"
+  },
+  "webServerParams" : {
+    "applicationName" : "kLiveDVR"
   }
 }
