--- a/.jshintrc
+++ b/.jshintrc
@@ -5,7 +5,7 @@
   "eqnull": true,   // true: Tolerate use of `== null`
   "immed": true,    // true: Require immediate invocations to be wrapped in parens e.g. `(function () { } ());`
   "latedef": true,  // true: Require variables/functions to be defined before being used
-  "newcap": true,   // true: Require capitalization of all constructor functions e.g. `new F()`
+  "newcap": false,   // true: Require capitalization of all constructor functions e.g. `new F()`
   "noarg": true,    // true: Prohibit use of `arguments.caller` and `arguments.callee`
   "sub": true,      // true: Tolerate using `[]` notation when it can still be expressed in dot notation
   "undef": true,    // true: Require all non-global variables to be declared (prevents global leaks)
