--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mocha": "2.2.5",
     "istanbul" : "0.3.18",
     "grunt-mocha-istanbul" : "3.0.1",
-    "proxyquire": "1.7.0"
+    "proxyquire": "1.7.0",
+    "tmp" : "0.0.27"
   },
   "dependencies": {
     "m3u8": "0.0.6",
