--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "request": "^2.61.0",
     "winston": "^1.0.1",
     "nconf" : "0.7.2",
-    "mkdirp" : "0.5.1"
+    "mkdirp" : "0.5.1",
+    "glob" : "5.0.14"
   }
 }
