--- a/lib/config/config.json
+++ b/lib/config/config.json
@@ -1,6 +1,7 @@
 {
   "mockNetwork" : false,
   "mockBackend" : true,
+  "readMockBackendResponseFromFile" : false,
   "rootFolderPath" : "c:\\dvr",
   "requestTimeout" : 10000,
   "pollingInterval" : 10000,
@@ -10,7 +11,7 @@
   "logLevel" : "debug",
   "logFileName" : "c:\\dvr\\filelog-info.log",
   "mediaServer" : {
-    "hostname" : "kalsegsec-a.akamaihd.net/dc-1/m/ny-live-publish1",
+    "hostname" : "dev-backend26.dev.kaltura.com",
     "applicationName" : "kLive"
   },
   "webServerParams" : {
