--- a/lib/config/config.json
+++ b/lib/config/config.json
@@ -1,18 +1,24 @@
 {
   "mockNetwork" : false,
   "mockBackend" : true,
-  "rootFolderPath" : "c:\\dvr",
+  "rootFolderPath" : "/Users/AsherS/Downloads/DVR",
   "requestTimeout" : 10000,
   "pollingInterval" : 10000,
   "backendPollingInterval" : 3000,
   "dvrWindow" : 7200,
+  "liveDvrWindow" : 100,
   "logLevel" : "debug",
-  "logFileName" : "c:\\dvr\\filelog-info.log",
+  "logFileName" : "log/filelog-info.log",
   "mediaServer" : {
     "hostname" : "kalsegsec-a.akamaihd.net/dc-1/m/ny-live-publish1",
     "applicationName" : "kLive"
   },
   "webServerParams" : {
     "applicationName" : "kLiveDVR"
-  }
+  },
+  "adminSecret" :"admin secret",
+  "partnerId" : "partner Id (integer)",
+  "mediaServerHostname" : "media server hostname",
+  "serviceUrl" : "back end service url",
+  "backendClientSessionDurationMinutes" : 60
 }
