Update session manager and end list appender logic and tests

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "winston": "^1.0.1",
     "nconf" : "0.7.2",
     "mkdirp" : "0.5.1",
-    "glob" : "5.0.14"
+    "glob" : "5.0.14",
+    "touch" : "1.0.0"
   }
 }
