--- a/dvr-ws/package.json
+++ b/dvr-ws/package.json
@@ -10,8 +10,9 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-winston": "^0.4.1",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "winston": "^1.0.1"
   }
 }
