--- a/dvr-ws/package.json
+++ b/dvr-ws/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.1",
     "express-winston": "^0.4.1",
     "jade": "~1.11.0",
+    "mkdirp": "^0.5.1",
     "serve-favicon": "~2.3.0",
     "winston": "^1.0.1"
   }
