--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nconf" : "0.7.2",
     "mkdirp" : "0.5.1",
     "glob" : "5.0.14",
-    "touch" : "1.0.0"
+    "touch" : "1.0.0",
+    "curry" : "1.2.0"
   }
 }
