--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mkdirp" : "0.5.1",
     "glob" : "5.0.14",
     "touch" : "1.0.0",
-    "curry" : "1.2.0"
+    "curry" : "1.2.0",
+    "shelljs" : "0.5.3"
   }
 }
