Add service wrappers and forever as a module dependency

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "rimraf" : "2.4.3"
   },
   "dependencies": {
+    "forever" : "0.15.1",
     "m3u8": "0.0.6",
     "q-io": "1.13.1",
     "q": "1.4.1",
