--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "forever" : "0.15.1",
-    "m3u8": "0.0.6",
+    "m3u8": "git://github.com/eladBenedict/node-m3u8.git#master",
     "q-io": "1.13.1",
     "q": "1.4.1",
     "underscore": "1.8.3",
