Remove (wrong) port from default configuration template
Add some more logging

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -14,8 +14,7 @@
   "logFileName" : "/var/log/dvr_worker.log",
   "mediaServer" : {
     "hostname" : "@HOSTNAME@",
-    "applicationName" : "kLive",
-    "port" : 1935
+    "applicationName" : "kLive"
   },
   "webServerParams" : {
     "applicationName" : "kLive",
