Add Cycliv heap dump

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -29,4 +29,8 @@
     "serviceUrl" : "http://serviceURL",
     "ksSessionRefreshIntervalMinutes" : 720
   }
+  "HeapDumpParams" : { 
+    "timeInterval":9000000,
+     "windowSize":3
+     }
 }
