revert default value

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -2,7 +2,7 @@
   "mockNetwork" : false,
   "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
-  "rootFolderPath" : "c:\\del",
+  "rootFolderPath" : "/dvrContentRootPath",
   "requestTimeout" : 10000,
   "pollingInterval" : 2000,
   "backendPollingInterval" : 3000,
