Change log path

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -11,7 +11,7 @@
   "liveDvrWindow" : 150,
   "logLevel" : "debug",
   "logToConsole" : true,
-  "logFileName" : "/var/log/kDvrWorker.log",
+  "logFileName" : "/var/log/liveDVR/kDvrWorker.log",
   "mediaServer" : {
     "hostname" : "@HOSTNAME@",
     "applicationName" : "kLive"
@@ -20,7 +20,7 @@
     "applicationName" : "kLive",
     "port" : 8080,
     "logLevel" : "debug",
-    "logFileName" : "/var/log/kDvrWebServer.log",
+    "logFileName" : "/var/log/liveDVR/kDvrWebServer.log",
     "logToConsole" : true
   },
   "backendClient" : {
