Moved teardownInterval param to configuration and updated tests accordingly

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -9,6 +9,7 @@
   "dvrWindow" : 7200,
   "sessionDuration" : 180000,
   "liveDvrWindow" : 150,
+  "flavorDownloaderTeardownInterval" : 15000,
   "logLevel" : "debug",
   "logToConsole" : true,
   "logFileName" : "/var/log/liveDVR/kDvrWorker.log",
