--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -6,9 +6,10 @@
   "requestTimeout" : 10000,
   "pollingInterval" : 2000,
   "backendPollingInterval" : 3000,
-  "dvrWindow" : 7200,
+  "dvrTimeWindow" : 7200,
+  "dvrMaxChunkCount" : 1000,
+  "liveMaxChunkCount" : 15,
   "sessionDuration" : 180000,
-  "liveDvrWindow" : 150,
   "flavorDownloaderTeardownInterval" : 15000,
   "logLevel" : "debug",
   "logToConsole" : true,
