--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "touch": "1.0.0",
     "underscore": "1.8.3",
     "winston": "^1.0.1",
-    "moment-timezone" : "0.4.1",
-    "nedb" : "1.5.0"
+    "moment-timezone" : "0.4.1"
   }
 }
