--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "touch": "1.0.0",
     "underscore": "1.8.3",
     "winston": "^1.0.1",
-    "moment-timezone" : "0.4.1"
+    "moment-timezone" : "0.4.1",
+    "v8-profiler" : "5.5.0"
   }
 }
