--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "shelljs": "0.5.3",
     "touch": "1.0.0",
     "underscore": "1.8.3",
-    "winston": "^1.0.1",
+    "log4js" : "0.6.29",
     "moment-timezone" : "0.4.1",
     "v8-profiler" : "5.5.0"
   }
