--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -37,6 +37,6 @@
     "windowSize" : 3,
     "enabled" : false
   },
-  "ffProbePath" : "C:\\ffmpeg\\bin\\ffprobe.exe",
+  "ffprobePath" : "C:\\ffmpeg\\bin\\ffprobe.exe",
   "ffmpegPath" : "C:\\ffmpeg\\bin\\ffmpeg.exe"
 }
