--- a/dvr-ws/package.json
+++ b/dvr-ws/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "mkdirp": "^0.5.1",
     "serve-favicon": "~2.3.0",
-    "winston": "^1.0.1"
+    "winston": "^1.0.1",
+    "apache-like-accesslog" : "0.0.5"
   }
 }
