--- a/tests/resources/nginx.conf
+++ b/tests/resources/nginx.conf
@@ -1,6 +1,6 @@
 user  kaltura;
-worker_processes  auto;
-error_log  /var/log/nginx/error.log warn;
+worker_processes auto;
+error_log  /var/log/nginx/error.log debug;
 pid        /var/run/nginx.pid;
 
 events {
@@ -13,61 +13,37 @@ http {
 	
     log_format  main    '$msec  $remote_addr $remote_port "$request" '
                         '$request_length $status $bytes_sent $request_time '
-                        '$upstream_cache_status $upstream_response_time';
+                        '$upstream_cache_status $upstream_response_time $upstream_http_cache_control';
 						
 	access_log          /var/log/nginx/access.log  main;
 	
 	
-	proxy_cache_path /etc/nginx/static  levels=1:2 keys_zone=one:20m inactive=1d max_size=11023M ;
-	proxy_cache_path /etc/nginx/vod-shortterm  levels=1:2 keys_zone=vod-shortterm-zone:20m inactive=3d max_size=5511M ;
-	proxy_cache_path /etc/nginx/vod-longterm  levels=1:2 keys_zone=vod-longterm-zone:20m inactive=30d max_size=11023M ;
+	proxy_cache_path /etc/nginx/static  levels=1:2 keys_zone=one:20m inactive=5h max_size=11023M ;
+	proxy_cache_use_stale updating;
 	proxy_cache_lock on;
 	proxy_cache_lock_timeout 15s;
 	proxy_cache_valid 404   10s;
 	proxy_cache_valid 502   0s;
 	proxy_ignore_client_abort on;
 	
-#	include ssl.conf;
-	
 	proxy_cache one;
 	
-	include vod_packager.conf;
-	
-	server {
-		listen 80;
-		include locations.conf;
-	}
-
 	server {
 		listen 2000;
 
-   		location ~ ^/(?<proxiedHost>.*)/kLive_(?<realEntryId>.*)/(?<entryId>.*)(?<group>_.*).smil/playlist.m3u8 {
-	            resolver 127.0.0.1;
-		    proxy_cache_key $proxiedHost/kLive/$realEntryId$group.smil/playlist.m3u8;	
-		    proxy_ignore_headers Cache-Control;
-		    proxy_cache_valid any 5m;
-                    proxy_pass $scheme://$proxiedHost/kLive/$realEntryId$group.smil/playlist.m3u8;
-                    #   proxy_set_header Host $http_host;
-                    #   proxy_pass $scheme://kalhlspd-a.origin.kaltura.com/enc/fhls/$1$is_args$args;
-                     add_header x-nginx-real-url "$scheme://$proxiedHost/kLive/$realEntryId$group.smil/playlist.m3u8" always;
-	             add_header x-nginx-proxy_cache_key "$proxiedHost/kLive/$realEntryId$group.smil/playlist.m3u8" always;		
-                }
+  		location ~ ^/(?<proxiedHost>.*)/kLive_(?<realEntryId>.*)/smil:(?<entryId>.*)(?<group>_.*).smil/(?<filename>.*) {
+ 		    
+		    proxy_cache_valid 403   0s;
+		    resolver 127.0.0.1;
+		    proxy_cache_key "$proxiedHost/kLive/smil:$realEntryId$group.smil/$filename";
+    	            proxy_pass $scheme://$proxiedHost/kLive/smil:$realEntryId$group.smil/$filename;
 
-		location ~ ^/(?<proxiedHost>.*)/kLive_(?<realEntryId>.*)/(?<entryId>.*)(?<group>_.*).smil/(?<filename>.*) {
- 		    resolver 127.0.0.1;
-		    proxy_cache_key $proxiedHost/kLive/$realEntryId$group.smil/$filename;	
-    		    proxy_pass $scheme://$proxiedHost/kLive/$realEntryId$group.smil/$filename; 
-		    #	proxy_set_header Host $http_host;
-		    #   proxy_pass $scheme://kalhlspd-a.origin.kaltura.com/enc/fhls/$1$is_args$args;
-		     add_header x-nginx-real-url "$scheme://$proxiedHost/kLive/$realEntryId$group.smil/$filename" always;
+		    add_header x-nginx-real-url "<$scheme://$proxiedHost/kLive/smil:$realEntryId$group.smil/$filename>" always;
+		    add_header x-nginx-proxy_cache_key "<$proxiedHost/kLive/smil:$realEntryId$group.smil/$filename>" always;
+		    add_header x-nginx-cache-control "$upstream_http_cache_control" always;
+		    add_header x-nginx-req-entryId "$entryId" always;	
 		}
 
-		 location ~ ^/(?<proxiedHost>.*)/kLive_(?<realEntryId>.*)/(?<entryId>.*)(?<flavour>_.*)/(?<filename>.*) {
-   		   resolver 127.0.0.1;
-		   proxy_cache vod-longterm-zone;
-	 	   proxy_pass $scheme://$proxiedHost/kLive/$realEntryId$flavour/$filename;
-		   add_header x-nginx-real-url  "$scheme://$proxiedHost/kLive/$realEntryId$flavour/$filename" always;
-		}
 	}
 	
 	sendfile        on;
