PLAT-5021 remove smil from all url requests - modify_3

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -2,6 +2,7 @@
   "mockNetwork" : false,
   "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
+  "flavorBasedUrls": true,
   "rootFolderPath" : "/dvrContentRootPath",
   "oldContentFolderPath" : "/dvrOldContentRootPath",
   "requestTimeout" : 10000,
