update dvrWindow's logic and name

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -7,8 +7,8 @@
   "requestTimeout" : 10000,
   "pollingInterval" : 2000,
   "backendPollingInterval" : 3000,
-  "dvrTimeWindow" : 7200,
-  "dvrTimeWindowThreshold":900,     //Minimum DVR window
+  "defaultDvrWindow" : 7200,
+  "minimalDvrWindow":900,
   "dvrMaxChunkCount" : 1000,
   "liveMaxChunkCount" : 15,
   "sessionDuration" : 180000,
