--- a/dvr-ws/conf/nginx.conf
+++ b/dvr-ws/conf/nginx.conf
@@ -108,4 +108,39 @@ http {
     }
 
 
+
+
+    proxy_cache_path /Users/guyjacubovski/dvr/dvrContentRootPath/nginxCache  levels=1:2 keys_zone=one:20m inactive=5h max_size=11023M ;
+    proxy_cache_use_stale updating;
+    proxy_cache_lock on;
+    proxy_cache_lock_timeout 15s;
+    proxy_cache_valid 404   10s;
+    proxy_cache_valid 502   0s;
+    proxy_ignore_client_abort on;
+
+
+ 	server {
+
+     	proxy_cache one;
+ 		listen 2000;
+
+   		location ~ /entry/(?<entryId>.*)/origin/(?<origin>.*) {
+
+ 		    proxy_cache_valid 403   0s;
+ 		    proxy_cache_valid 404   0s;
+ 		    resolver 127.0.0.1;
+ 		    proxy_cache_key "$origin";
+   	        proxy_pass $scheme://$origin$is_args$args;
+
+
+
+ 		    add_header x-nginx-real-url "$origin" always;
+ 		    add_header x-nginx-proxy_cache_key "$origin" always;
+ 		    add_header x-nginx-cache-control "$upstream_http_cache_control" always;
+ 		    add_header x-nginx-req-entryId "$entryId" always;
+
+ 		}
+
+ 	}
+
 }
