--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -2,8 +2,11 @@
   "mockNetwork" : false,
   "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
+  "universalTsTimestamp" : true,
   "rootFolderPath" : "/dvrContentRootPath",
   "oldContentFolderPath" : "/dvrOldContentRootPath",
+  "rootFolderPath" : "/Users/ronyadgar/Downloads/DVR",
+  "oldContentFolderPath" : "/Users/ronyadgar/Documents/tmp",
   "requestTimeout" : 10000,
   "pollingInterval" : 2000,
   "backendPollingInterval" : 3000,
