--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -11,6 +11,7 @@
   "minimalDvrWindow":900,
   "dvrMaxChunkCount" : 1000,
   "liveMaxChunkCount" : 15,
+  "minChunksForPlayback" : 3,
   "sessionDuration" : 180000,
   "flavorDownloaderTeardownInterval" : 15000,
   "logLevel" : "DEBUG",
