PLAT-5040 Calling register/unregister from live proxy

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -6,13 +6,14 @@
   "oldContentFolderPath" : "/dvrOldContentRootPath",
   "requestTimeout" : 20000,
   "pollingInterval" : 2000,
-  "backendPollingInterval" : 3000,
+  "backendPollingInterval" : 5000,
   "defaultDvrWindow" : 7200,
   "minimalDvrWindow":900,
   "dvrMaxChunkCount" : 1000,
   "liveMaxChunkCount" : 15,
   "minChunksForPlayback" : 3,
   "sessionDuration" : 180000,
+  "apiUpdateInterval" : 60000,
   "flavorDownloaderTeardownInterval" : 15000,
   "logLevel" : "DEBUG",
   "logToConsole" : false,
