PLAT-5040 Calling register/unregister from live proxy - update 2

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -7,6 +7,7 @@
   "requestTimeout" : 20000,
   "pollingInterval" : 2000,
   "backendPollingInterval" : 5000,
+  "wowzaPollingInterval" : 5000,
   "defaultDvrWindow" : 7200,
   "minimalDvrWindow":900,
   "dvrMaxChunkCount" : 1000,
@@ -27,6 +28,9 @@
   "mediaServer" : {
     "hostname" : "@HOSTNAME@",
     "applicationName" : "kLive"
+    "port" : 80,
+    "user" : "",
+    "password" : ""
   },
   "webServerParams" : {
     "applicationName" : "kLive",
