--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -13,6 +13,7 @@
   "liveMaxChunkCount" : 15,
   "sessionDuration" : 180000,
   "flavorDownloaderTeardownInterval" : 15000,
+  "playlistUpdateInterval" : 60000,
   "logLevel" : "DEBUG",
   "logToConsole" : false,
   "logFileName" : "/var/log/liveDVR/kDvrWorker.log",
