--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -5,8 +5,8 @@
   "rootFolderPath" : "~/dvr/dvrContentRootPath",
   "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
   "requestTimeout" : 20000,
-  "successPollingInterval" : 2000,
-  "failPollingInterval" : 10000,
+  "flavorSuccessPollingInterval" : 2000,
+  "flavorFailPollingInterval" : 10000,
   "backendPollingInterval" : 5000,
   "wowzaPollingInterval" : 5000,
   "defaultDvrWindow" : 7200,
