--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -1,26 +1,22 @@
 {
   "mockNetwork" : false,
-  "mockBackend" : true,
+  "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
-  "rootFolderPath" : "~/dvr/dvrContentRootPath",
-  "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
+  "rootFolderPath" : "/dvrContentRootPath",
+  "oldContentFolderPath" : "/dvrOldContentRootPath",
   "requestTimeout" : 20000,
-  "flavorSuccessPollingInterval" : 2000,
-  "flavorFailPollingInterval" : 10000,
-  "backendPollingInterval" : 5000,
-  "wowzaPollingInterval" : 5000,
+  "pollingInterval" : 2000,
+  "backendPollingInterval" : 3000,
   "defaultDvrWindow" : 7200,
-  "minimalDvrWindow" : 900,
+  "minimalDvrWindow":900,
   "dvrMaxChunkCount" : 1000,
   "liveMaxChunkCount" : 15,
-  "minChunksForPlayback" : 3,
   "sessionDuration" : 180000,
-  "apiUpdateInterval" : 60000,
   "flavorDownloaderTeardownInterval" : 15000,
   "playlistUpdateInterval" : 300000,
-  "logLevel" : "WARN",
-  "logToConsole" : true,
-  "logFileName" : "~/dvr/kDvrWorker.log",
+  "logLevel" : "DEBUG",
+  "logToConsole" : false,
+  "logFileName" : "/var/log/liveDVR/kDvrWorker.log",
   "simulateStreams": {
       "enable":false,
       "count": 100,
@@ -28,17 +24,14 @@
       "wowzaUrl": "http://127.0.0.1:1935/live/_definst_/1_abc123_1/playlist.m3u8"
   },
   "mediaServer" : {
-    "hostname" : "127.0.0.1",
-    "applicationName" : "live",
-    "port" : 1935,
-    "user" : "",
-    "password" : ""
+    "hostname" : "@HOSTNAME@",
+    "applicationName" : "kLive"
   },
   "webServerParams" : {
     "applicationName" : "kLive",
     "port" : 8080,
     "logLevel" : "DEBUG",
-    "logFileName" : "~/dvr/kDvrWebServer.log",
+    "logFileName" : "/var/log/liveDVR/kDvrWebServer.log",
     "logToConsole" : true
   },
   "backendClient" : {
