--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -44,5 +44,12 @@
     "timeInterval" : 900000,
     "windowSize" : 3,
     "enabled" : false
-  }
+  },
+   "playlistConfig" : {
+       "debug" : false,
+       "waitTimeBeforeRemoval" : 100000,
+       "maxChunkGapSize" : 10000,
+       "maxAllowedPTSDrift": 1000,
+       "timestampToleranceMs": 2
+   }
 }
