--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -19,12 +19,13 @@
   "flavorDownloaderTeardownInterval" : 15000,
   "playlistUpdateInterval" : 300000,
   "logLevel" : "DEBUG",
-  "logToConsole" : true,
+  "logToConsole" : false,
   "logFileName" : "~/dvr/kDvrWorker.log",
   "simulateStreams": {
       "enable":false,
-      "count": 100,
+      "count": 1,
       "maxChunkCount": 5,
+      "useNginx":false,
       "wowzaUrl": "http://127.0.0.1:1935/live/_definst_/1_abc123_1/playlist.m3u8"
   },
   "mediaServer" : {
