--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -53,5 +53,6 @@
     "timeInterval" : 900000,
     "windowSize" : 3,
     "enabled" : false
-  }
+  },
+  "universalTimestampPartnersList" : [103]
 }
