universalTimestampPartnersList should be empty

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -54,5 +54,5 @@
     "windowSize" : 3,
     "enabled" : false
   },
-  "universalTimestampPartnersList" : [103]
+  "universalTimestampPartnersList" : []
 }
