--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -1,48 +1,31 @@
 {
   "mockNetwork" : false,
-  "mockBackend" : true,
+  "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
-  "rootFolderPath" : "~/dvr/dvrContentRootPath",
-  "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
+  "rootFolderPath" : "/dvrContentRootPath",
+  "oldContentFolderPath" : "/dvrOldContentRootPath",
   "requestTimeout" : 20000,
-  "flavorSuccessPollingInterval" : 2000,
-  "flavorFailPollingInterval" : 10000,
-  "backendPollingInterval" : 5000,
-  "wowzaPollingInterval" : 5000,
+  "pollingInterval" : 2000,
+  "backendPollingInterval" : 3000,
   "defaultDvrWindow" : 7200,
-  "minimalDvrWindow" : 900,
+  "minimalDvrWindow":900,
   "dvrMaxChunkCount" : 1000,
   "liveMaxChunkCount" : 15,
-  "minChunksForPlayback" : 3,
   "sessionDuration" : 180000,
-  "apiUpdateInterval" : 60000,
   "flavorDownloaderTeardownInterval" : 15000,
   "playlistUpdateInterval" : 300000,
-  "preserveOriginalChunk":true,
-  "logLevel" : "WARN",
-  "logToConsole" : true,
-  "logFileName" : "~/dvr/kDvrWorker.log",
+  "logLevel" : "DEBUG",
+  "logToConsole" : false,
+  "logFileName" : "/var/log/liveDVR/kDvrWorker.log",
   "simulateStreams": {
-      "enable":true,
-      "count": 1,
-      "dvrWindow": 7200,
+      "enable":false,
+      "count": 100,
       "maxChunkCount": 5,
-      "wowzaUrl": "http://kalsegsec-a.akamaihd.net/dc-1/m/ny-live-publish101/kLive/smil:1_ceut3fcf_all.smil/playlist.m3u8",
-      "entryId" : "1_ceut3fcf"
+      "wowzaUrl": "http://127.0.0.1:1935/live/_definst_/1_abc123_1/playlist.m3u8"
   },
   "mediaServer" : {
-    "hostname" : "127.0.0.1",
-    "applicationName" : "live",
-    "port" : 1935,
-    "user" : "",
-    "password" : ""
-  },
-  "webServerParams" : {
-    "applicationName" : "kLive",
-    "port" : 8080,
-    "logLevel" : "DEBUG",
-    "logFileName" : "~/dvr/kDvrWebServer.log",
-    "logToConsole" : true
+    "hostname" : "@HOSTNAME@",
+    "applicationName" : "kLive"
   },
   "backendClient" : {
     "adminSecret" :"admin secret",
@@ -55,13 +38,13 @@
     "windowSize" : 3,
     "enabled" : false
   },
-  "playlistConfig" : {
-      "debug" : true,
-      "waitTimeBeforeRemoval" : 100000,
-      "maxChunkGapSize" : 10000,
-      "maxAllowedPTSDrift": 1000,
-      "timestampToleranceMs": 2,
-       "minRefreshPlaylistInterval" : 20000,
-       "humanReadable" : true
-  }
+   "playlistConfig" : {
+        "debug" : false,
+        "waitTimeBeforeRemoval" : 100000,
+        "maxChunkGapSize" : 10000,
+        "maxAllowedPTSDrift": 1000,
+        "timestampToleranceMs": 2,
+         "minRefreshPlaylistInterval" : 20000,
+         "humanReadable" : false
+    }
 }
