--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -33,8 +33,26 @@ http {
     #gzip  on;
 
     server {
-        listen       8080;
+        listen       @PORT@;
         server_name  localhost;
+
+        #web server access
+
+        location ~ /kLive\/([^\\\/]*)\/playlist.m3u8 {
+            proxy_pass http://127.0.0.1:$server_port/hls/$1/playlist.json/master.m3u8;
+            add_header 'Access-Control-Allow-Headers' 'Origin,Range';
+            add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,Date';
+            add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
+            add_header 'Access-Control-Allow-Origin' '*';
+        }
+
+        location ~ /kLive\/([^\\\/]*)\/([^\?]*)/ {
+            proxy_pass http://127.0.0.1:$server_port/hls/$1/playlist.json/$2;
+            add_header 'Access-Control-Allow-Headers' 'Origin,Range';
+            add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,Date';
+            add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
+            add_header 'Access-Control-Allow-Origin' '*';
+        }
 
        location /hls/ {
             vod hls;
