--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -37,22 +37,15 @@ http {
         server_name  localhost;
 
         #web server access
+        #rewrite_log on;
+        #error_log    /usr/local/nginx/logs/example.com.error.log debug;
 
-        location ~ /kLive\/([^\\\/]*)\/playlist.m3u8 {
-            proxy_pass http://127.0.0.1:$server_port/hls/$1/playlist.json/master.m3u8;
-            add_header 'Access-Control-Allow-Headers' 'Origin,Range';
-            add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,Date';
-            add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
-            add_header 'Access-Control-Allow-Origin' '*';
-        }
+        rewrite /kLive\/smil:(.*)_all.smil\/(.*)\/chunklist.m3u8  /hls/$1/playlist.json/index-f$2-v1-a1.m3u8 last;
+        rewrite /kLive\/smil:(.*)_all.smil\/(.*)\/(.*).ts  /hls/$1/playlist.json/$3.ts last;
 
-        location ~ /kLive\/([^\\\/]*)\/([^\?]*)/ {
-            proxy_pass http://127.0.0.1:$server_port/hls/$1/playlist.json/$2;
-            add_header 'Access-Control-Allow-Headers' 'Origin,Range';
-            add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,Date';
-            add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
-            add_header 'Access-Control-Allow-Origin' '*';
-        }
+        rewrite  /kLive\/smil:(.*)_all.smil\/playlist.m3u8  /hls/$1/playlist.json/master.m3u8 last;
+        rewrite  /kLive\/smil:(.*)_all.smil\/(.*)  /hls/$1/playlist.json/$2 last;
+
 
        location /hls/ {
             vod hls;
@@ -75,5 +68,7 @@ http {
             add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
             add_header 'Access-Control-Allow-Origin' '*';
        }
- }
+
+
+    }
 }
