--- a/dvr-ws/package.json
+++ b/dvr-ws/package.json
@@ -15,6 +15,7 @@
     "serve-favicon": "~2.3.0",
     "winston": "^1.0.1",
     "apache-like-accesslog" : "git://github.com/eladBenedict/NodeJS-Apache-Like-AccessLog.git#master",
-    "compression": "1.6.1"
+    "compression": "1.6.1",
+    "request": "2.72.0"
   }
 }
