--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -1,6 +1,6 @@
 {
   "mockNetwork" : false,
-  "mockBackend" : true,
+  "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
   "rootFolderPath" : "~/dvr/dvrContentRootPath",
   "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
@@ -54,13 +54,13 @@
     "enabled" : false
   },
   "playlistConfig" : {
-    "debug" : true,
+    "debug" : false,
     "waitTimeBeforeRemoval" : 100000,
     "maxChunkGapSize" : 10000,
     "maxAllowedPTSDrift": 1000,
     "timestampToleranceMs": 2,
     "minRefreshPlaylistInterval" : 20000,
-    "humanReadable" : true,
+    "humanReadable" : false,
     "keyFrameSearchOffsetMs" : 1,
     "discontinuityMode" : true,
      "segmentDuration" : 10000
