change #2 of 3 (web server side)
On Web server side, when client (player), requests chunkiest, check if
it is valid. In case, file expired return 404, otherwise return the
file.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -33,15 +33,16 @@
     "applicationName" : "kLive",
     "port" : 1935,
     "user" : "",
-    "password" : "",
-    "maxPlaylistFileAgeMillisec" : 300000
+    "password" : ""
+
   },
   "webServerParams" : {
     "applicationName" : "kLive",
     "port" : 8080,
     "logLevel" : "DEBUG",
     "logFileName" : "~/dvr/kDvrWebServer.log",
-    "logToConsole" : true
+    "logToConsole" : true,
+    "chunklistExpireAge" : 300000
   },
   "backendClient" : {
     "adminSecret" :"admin secret",
