--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -1,6 +1,6 @@
 {
   "mockNetwork" : false,
-  "mockBackend" : false,
+  "mockBackend" : true,
   "readMockBackendResponseFromFile" : false,
   "rootFolderPath" : "~/dvr/dvrContentRootPath",
   "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
@@ -22,18 +22,12 @@
   "logFileName" : "~/dvr/kDvrWorker.log",
   "preserveOriginalChunk" : true,
   "simulateStreams": {
-      "enable":true,
-         "count": 1,
-         "playWindow": 200,
-         "maxChunkCount": 5,
-         "useNginx":false,
-         "orig_wowzaUrl": "http://kalsegsec-a.akamaihd.net/dc-0/m/pa-live-publish2/kLive/smil:1_oorxcge2_all.smil/playlist.m3u8",
-         "orig_entryId": "1_oorxcge2",
-         "entryId": "1_ceut3fcf",
-         "tt_wowzaUrl": "http://127.0.0.1:1935/kLive/_definst_/1_ceut3fcf_1/playlist.m3u8",
-         "wowzaUrl": "http://kalsegsec-a.akamaihd.net/dc-1/m/ny-live-publish101/kLive/smil:1_ceut3fcf_all.smil/playlist.m3u8",
-         "abc_entryId": "1_abc123",
-         "abc_wowzaUrl": "http://127.0.0.1:1935/kLive/_definst_/1_abc123_1/playlist.m3u8"
+      "enable":false,
+      "count": 1,
+      "dvrWindow": 7200,
+      "maxChunkCount": 5,
+      "useNginx":false,
+      "wowzaUrl": "http://kalsegsec-a.akamaihd.net/dc-0/m/pa-live-publish2/kLive/smil:1_oorxcge2_all.smil/playlist.m3u8"
   },
   "mediaServer" : {
     "hostname" : "@HOSTNAME@",
@@ -54,13 +48,13 @@
     "enabled" : false
   },
   "playlistConfig" : {
-    "debug" : false,
+    "debug" : true,
     "waitTimeBeforeRemoval" : 100000,
     "maxChunkGapSize" : 10000,
     "maxAllowedPTSDrift": 1000,
     "timestampToleranceMs": 2,
-    "minRefreshPlaylistInterval" : 20000,
-    "humanReadable" : false,
+    "minRefreshPlaylistInterval" : 9000,
+    "humanReadable" : true,
     "keyFrameSearchOffsetMs" : 1,
     "discontinuityMode" : true,
      "segmentDuration" : 10000
