running of endlist appender timer & expire chunklist modified time
1. Expire chunklist modified time done to 2hrs back instead of 1 day.
Reason, daily files cleanup job.
2. EndlistAppender timer is using now ‘endlistAppederTimerMillisec’
config param, instead of ‘sessionDuration’ (removed).
3. try & catch block removed from route/index.js,
checkExpiredAndSendFile(), it isn’t required.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -14,10 +14,10 @@
   "dvrMaxChunkCount" : 1000,
   "liveMaxChunkCount" : 15,
   "minChunksForPlayback" : 3,
-  "sessionDuration" : 180000,
   "apiUpdateInterval" : 60000,
   "flavorDownloaderTeardownInterval" : 15000,
   "numOfIterationsForPlaylistUpdate" : 5,
+  "endlistAppederTimerMillisec" : 60000,
   "logLevel" : "DEBUG",
   "logToConsole" : false,
   "logFileName" : "~/dvr/kDvrWorker.log",
