removed getSessionDuration from sessionManager.js
1. Removed method (getSessionDuration) used only by EndlistAppender,
from sessionManager.
2. Added property endlistAppendTimer that is initiated during actor of
EndlistAppender to config value of ‘endlistAppederTimerMillisec’.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ NewTsRebase/build/**
 endListPending.json
 common/config/config.json
 common/config/configMapping.json
+
+common/config/configMapping copy.json
+
+common/config/configMapping.json.backup
+
+lib/mocks/BackendClientMock copy.js
