--- a/dvr-ws/package.json
+++ b/dvr-ws/package.json
@@ -14,7 +14,7 @@
     "mkdirp": "^0.5.1",
     "serve-favicon": "~2.3.0",
     "winston": "^1.0.1",
-    "apache-like-accesslog" : "git://github.com/eladBenedict/NodeJS-Apache-Like-AccessLog.git#master",
+    "morgan" : "1.7.0",
     "compression": "1.6.1",
     "request": "2.72.0"
   }
