--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "curry": "1.2.0",
     "forever": "0.15.1",
+    "fs-extra": "^0.30.0",
     "glob": "5.0.14",
     "heapdump": "^0.3.7",
+    "log4js": "0.6.29",
     "m3u8": "git://github.com/eladBenedict/node-m3u8.git#master",
     "mkdirp": "0.5.1",
     "nconf": "0.7.2",
@@ -32,7 +34,6 @@
     "shelljs": "0.5.3",
     "touch": "1.0.0",
     "underscore": "1.8.3",
-    "log4js" : "0.6.29",
-    "v8-profiler" : "5.5.0"
+    "v8-profiler": "5.5.0"
   }
 }
