--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -43,11 +43,19 @@ http {
         #rewrite_log on;
         #error_log    /usr/local/nginx/logs/example.com.error.log debug;
 
-        rewrite /kLive\/smil:(.*)_all.smil\/(.*)\/chunklist.m3u8  /hls/$1/playlist.json/index-s$2.m3u8 last;
-        rewrite /kLive\/smil:(.*)_all.smil\/(.*)\/(.*).ts  /hls/$1/playlist.json/$3.ts last;
+        #HLS
 
-        rewrite  /kLive\/smil:(.*)_all.smil\/playlist.m3u8  /hls/$1/playlist.json/master.m3u8 last;
-        rewrite  /kLive\/smil:(.*)_all.smil\/(.*)  /hls/$1/playlist.json/$2 last;
+        #Rules for requesting playlist from packager
+        rewrite  /kLive\/smil:(.*)_all.smil\/playlist.m3u8           /hls/$1/playlist.json/master.m3u8 last;
+        rewrite  /kLive\/smil:(.*)_all.smil\/([^\/]*(:?ts|m3u8).*)   /hls/$1/playlist.json/$2 last;
+
+        #Rules if backend builds playlist
+        rewrite  /kLive\/smil:(.*)_all.smil\/(.*)\/chunklist.m3u8    /hls/$1/playlist.json/index-s$2-v1-a1.m3u8 last;
+        rewrite  /kLive\/smil:(.*)_all.smil\/(.*)\/(.*)(.ts|.m3u8)   /hls/$1/playlist.json/$3$4 last;
+
+        #HDS
+        rewrite  /kLive\/smil:(.*)_all.smil\/manifest.f4m            /hds/$1/playlist.json/manifest.f4m last;
+        rewrite  /kLive\/smil:(.*)_all.smil\/(.*).abst               /hds/$1/playlist.json/$2.abst last;
 
         location = /serverip {
 
@@ -55,30 +63,48 @@ http {
             return 200 "Kaltura";
         }
 
+        location /hls/ {
+             vod hls;
+             alias @CONTENT_DIR@;
+             vod_max_mapping_response_size 1000K;
+             vod_align_segments_to_key_frames on;
+             vod_mode mapped;
+             vod_hls_absolute_master_urls off;
+             vod_hls_absolute_index_urls off;
+             gzip on;
+             gzip_types application/vnd.apple.mpegurl;
+             expires off;
+             vod_live_window_duration 0;
+             vod_last_modified 'Sun, 19 Nov 2000 08:52:00 GMT';
+             vod_last_modified_types *;
+             vod_expires 100d;
+             vod_expires_live 3;
+             add_header 'Access-Control-Allow-Headers' 'Origin,Range';
+             add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,Date';
+             add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
+             add_header 'Access-Control-Allow-Origin' '*';
+        }
 
-
-       location /hls/ {
-            vod hls;
-            alias @CONTENT_DIR@;
-            vod_max_mapping_response_size 1000K;
-            vod_align_segments_to_key_frames on;
-            vod_mode mapped;
-            vod_hls_absolute_master_urls off;
-            vod_hls_absolute_index_urls off;
-            gzip on;
-            gzip_types application/vnd.apple.mpegurl;
-            expires off;
-            vod_live_window_duration 0;
-            vod_last_modified 'Sun, 19 Nov 2000 08:52:00 GMT';
-            vod_last_modified_types *;
-            vod_expires 100d;
-            vod_expires_live 3;
-            add_header 'Access-Control-Allow-Headers' 'Origin,Range';
-            add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,Date';
-            add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
-            add_header 'Access-Control-Allow-Origin' '*';
-       }
-
+        location /hds/ {
+             vod hds;
+             alias @CONTENT_DIR@;
+             vod_max_mapping_response_size 1000K;
+             vod_align_segments_to_key_frames on;
+             vod_mode mapped;
+             gzip on;
+             gzip_types application/vnd.apple.mpegurl;
+             expires off;
+             vod_hds_manifest_file_name_prefix manifest;
+             vod_hds_fragment_file_name_prefix frag;
+             vod_last_modified 'Sun, 19 Nov 2000 08:52:00 GMT';
+             vod_last_modified_types *;
+             vod_expires 100d;
+             vod_expires_live 3;
+             add_header 'Access-Control-Allow-Headers' 'Origin,Range';
+             add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,Date';
+             add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
+             add_header 'Access-Control-Allow-Origin' '*';
+        }
 
         location / {
             expires 1d;
