--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "curry": "1.2.0",
     "forever": "0.15.1",
     "glob": "5.0.14",
-    "heapdump": "^0.3.7",
     "m3u8": "git://github.com/eladBenedict/node-m3u8.git#master",
     "mkdirp": "0.5.1",
     "nconf": "0.7.2",
@@ -32,7 +31,6 @@
     "shelljs": "0.5.3",
     "touch": "1.0.0",
     "underscore": "1.8.3",
-    "log4js" : "0.6.29",
-    "v8-profiler" : "5.5.0"
+    "log4js" : "0.6.37"
   }
 }
