keep playlist snapshot history (currently only when debugging

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -55,6 +55,7 @@
     "humanReadable" : false,
     "keyFrameSearchOffsetMs" : 1,
     "discontinuityMode" : true,
-    "segmentDuration" : 10000
+    "segmentDuration" : 10000,
+    "enablePlaylistHistory": false
   }
 }
